--- a/doc/tutorials/setup_db.ipynb
+++ b/doc/tutorials/setup_db.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d6b50070-ae30-4c1c-a56a-bd8881bba1a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-30T16:19:59.735069Z",
-     "start_time": "2023-10-30T16:19:59.728879Z"
+     "end_time": "2023-11-02T11:29:01.133832Z",
+     "start_time": "2023-11-02T11:29:01.118835Z"
     }
    },
    "outputs": [],
@@ -56,7 +56,10 @@
     "    @property\n",
     "    def BUCKETFS_PATH(self):\n",
     "        # Filesystem-Path to the read-only mounted BucketFS inside the running UDF Container\n",
-    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{self.BUCKETFS_BUCKET}\"\n",
+    "        return self.bucketfs_path(self.BUCKETFS_BUCKET)\n",
+    "    \n",
+    "    def bucketfs_path(self, bucket: str) -> str:\n",
+    "        return f\"/buckets/{self.BUCKETFS_SERVICE}/{bucket}\"\n",
     "\n",
     "    SCRIPT_LANGUAGE_NAME: str = \"PYTHON3_60\"\n",
     "    UDF_FLAVOR: str = \"python3-ds-EXASOL-6.0.0\"\n",
@@ -72,7 +75,7 @@
     "\n",
     "    @property\n",
     "    def connection_params(self):\n",
-    "        return {\"dns\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
+    "        return {\"dsn\": self.EXTERNAL_HOST, \"user\": self.USER, \"password\": self.PASSWORD, \"compression\": True}\n",
     "\n",
     "    @property\n",
     "    def params(self):\n",
@@ -93,12 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7f31ccfd-bd6d-435a-9f4c-ae2e5af04ea3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-30T16:20:00.552424Z",
-     "start_time": "2023-10-30T16:20:00.540210Z"
+     "end_time": "2023-11-02T11:35:24.132106Z",
+     "start_time": "2023-11-02T11:35:24.126365Z"
     }
    },
    "outputs": [],
@@ -109,7 +112,7 @@
     "def setup_schema(conf: SandboxConfig):\n",
     "    stopwatch = Stopwatch()\n",
     "\n",
-    "    with pyexasol.connect(dsn=conf.EXTERNAL_HOST, user=conf.USER, password=conf.PASSWORD, compression=True) as conn:\n",
+    "    with pyexasol.connect(**conf.connection_params) as conn:\n",
     "        conn.execute(query=\"CREATE SCHEMA IF NOT EXISTS {schema!i}\", query_params=conf.params)\n",
     "\n",
     "    print(f\"Schema created in {stopwatch}\")"
