Some more text changes

--- a/doc/tutorials/transformer/masked_modelling.ipynb
+++ b/doc/tutorials/transformer/masked_modelling.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4884f64d-aee2-4248-a922-8d28cf70209f",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f0cc45d2-d5ae-4afc-9f1d-251923995990",
    "metadata": {},
    "outputs": [],
@@ -106,12 +106,12 @@
     "\n",
     "To demonstrate filling of a masked word task we will use a [RadBERT model](https://huggingface.co/StanfordAIMI/RadBERT) which was pre-trained on radiology reports.\n",
     "\n",
-    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately we cannot tell exactly when it has finished. Notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for few moments after that, before querying the model."
+    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dede4beb-9bfe-413c-846a-a2e5c6eaa784",
    "metadata": {},
    "outputs": [],
@@ -122,19 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d4ca7457-501f-4c8e-a5c4-85d9e05670f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vagrant/data-science-sandbox/venv/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ./model_retrieval.ipynb\n",
     "load_huggingface_model(MODEL_NAME, sb_config)"
@@ -147,12 +138,12 @@
    "source": [
     "## Use language model\n",
     "\n",
-    "Let's see if the model can fill a masked word in an instruction usually given to a patient when radiographer is doing her chest X-ray."
+    "Let's see if the model can fill in a masked word in the following text. This is an instruction usually given to a patient when a radiographer is doing her chest X-ray."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dca587eb-3213-4089-a844-4bb89cf1afa3",
    "metadata": {},
    "outputs": [],
