--- a/doc/tutorials/transformer/question_answering.ipynb
+++ b/doc/tutorials/transformer/question_answering.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a28bb232-38d5-445a-9e7a-6f72e80bc2cc",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "13fa8443-17f5-4f75-8c2a-3a86d13d7911",
    "metadata": {},
    "outputs": [],
@@ -106,12 +106,12 @@
     "\n",
     "To demonstrate the question answering task we will use the [roberta model](https://huggingface.co/deepset/roberta-base-squad2).\n",
     "\n",
-    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately we cannot tell exactly when it has finished. Notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for few moments after that, before querying the model."
+    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6244f4ff-5054-486c-86ef-4f2389744ed9",
    "metadata": {},
    "outputs": [],
@@ -122,21 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "823b02ed-c50e-4908-a9de-7b358b449e8d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/vagrant/data-science-sandbox/venv/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Some weights of RobertaModel were not initialized from the model checkpoint at deepset/roberta-base-squad2 and are newly initialized: ['roberta.pooler.dense.weight', 'roberta.pooler.dense.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ./model_retrieval.ipynb\n",
     "load_huggingface_model(MODEL_NAME, sb_config)"
@@ -147,12 +136,14 @@
    "id": "3122d4bf-4942-4ee1-a73f-3f61ac46c4af",
    "metadata": {},
    "source": [
-    "## Use language model"
+    "## Use language model\n",
+    "\n",
+    "We are going to check the model output given the same question but two different contexts. In neither case the context has a direct answer to the question. We expect the answer to be relevant to the context."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "087ac7fa-945a-429a-87ed-b45de2c69259",
    "metadata": {},
    "outputs": [],
@@ -215,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0787b6ac-f3db-4971-b010-0eac38bd1921",
    "metadata": {},
    "outputs": [],
