--- a/doc/tutorials/transformer/te_init.ipynb
+++ b/doc/tutorials/transformer/te_init.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7433e5e3-5258-4773-b202-7aa1b05303ef",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6bcaef63-06a3-40c1-aaa2-552d78c77125",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,9 @@
    "id": "2f52f81c-5b0d-45b9-be11-def723aa4d25",
    "metadata": {},
    "source": [
-    "## Upload and activate the Script-Language-Container (SLC)"
+    "## Upload and activate the Script-Language-Container (SLC)\n",
+    "\n",
+    "The Transformer Extension requires installation of a special version of the Script Language Container - a platform for running UDF code. The <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md#the-pre-built-language-container\" target=\"_blank\" rel=\"noopener\">User Guide</a> provides detailed description of how this can be achieved. Here we will do what is described as Quick Installation - we will use the command-line interface."
    ]
   },
   {
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "383d7ea8-85dd-43f9-89b2-682060349e83",
    "metadata": {},
    "outputs": [],
@@ -213,12 +215,12 @@
    "source": [
     "### Huggingface token connection\n",
     "\n",
-    "If we need to use Huggingface token let's put it into an Exaso connection object."
+    "If we need to use Huggingface token let's put it into an Exasol connection object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c0715b35-9a6c-4809-aa7a-1460fe7bf41b",
    "metadata": {},
    "outputs": [],
