--- a/doc/tutorials/transformer/token_classification.ipynb
+++ b/doc/tutorials/transformer/token_classification.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "38d88106-5629-434c-8144-9c74ac4ccda2",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e9193a95-2d8c-4722-ab22-10b75d2c5253",
    "metadata": {},
    "outputs": [],
@@ -106,12 +106,12 @@
     "\n",
     "To demonstrate the token classification task we will use an [English Named Entity Recognition model](https://huggingface.co/sschet/biomedical-ner-all), trained on Maccrobat to recognize the bio-medical entities (107 entities) from a given text corpus (case reports etc.).\n",
     "\n",
-    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately we cannot tell exactly when it has finished. Notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for few moments after that, before querying the model."
+    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "26710f2d-a245-43e8-9ff2-292a60dbb19a",
    "metadata": {},
    "outputs": [],
@@ -136,12 +136,14 @@
    "id": "1581365c-eba7-4c9a-ae67-14543cb78dd2",
    "metadata": {},
    "source": [
-    "## Use language model"
+    "## Use language model\n",
+    "\n",
+    "Below is a medical report on a patient examination. In this report we will be looking for occurrences of recognized entities, such as patient data (e.g. age), symptom, clinical event, laboratory test result, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "59ec8aee-e40f-44e8-b94b-49c374b923f4",
    "metadata": {},
    "outputs": [],
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cc5b5ab6-4481-4b95-bcaa-86ad4da0d6e4",
    "metadata": {},
    "outputs": [],
