--- a/doc/tutorials/sagemaker/sme_deploy_model.ipynb
+++ b/doc/tutorials/sagemaker/sme_deploy_model.ipynb
@@ -65,10 +65,10 @@
     "    'UDF_RELEASE': '20190116',\n",
     "    'UDF_CLIENT': 'exaudfclient_py3',\n",
     "    'SCHEMA': 'IDA',\n",
-    "    'AWS_KEY_ID': 'AKIASNN2LAKN3EYP2Y45',\n",
-    "    'AWS_ACCESS_KEY': 'ezgUx1qb1jaPZFyL4DyNXfdnd67a1r31zuZBRkvA',\n",
-    "    'AWS_REGION': 'eu-central-1',\n",
-    "    'AWS_ROLE': 'arn:aws:iam::166283903643:role/sagemaker-role',\n",
+    "    'AWS_KEY_ID': '<key id>',\n",
+    "    'AWS_ACCESS_KEY': '<access key>',\n",
+    "    'AWS_REGION': '<region>',\n",
+    "    'AWS_ROLE': '<role>',\n",
     "    'AWS_BUCKET': 'ida-dataset-bucket',\n",
     "    'AWS_CONN': 'MyAWSConn',\n",
     "    'JOB_NAME': 'CLS20231102081841'\n",
