--- a/doc/tutorials/sagemaker/sme_init.ipynb
+++ b/doc/tutorials/sagemaker/sme_init.ipynb
@@ -88,10 +88,10 @@
     "%%capture\n",
     "\n",
     "# AWS access credentials\n",
-    "sb_config.save('AWS_KEY_ID', 'AKIASNN2LAKN3EYP2Y45')\n",
-    "sb_config.save('AWS_ACCESS_KEY', 'ezgUx1qb1jaPZFyL4DyNXfdnd67a1r31zuZBRkvA')\n",
-    "sb_config.save('AWS_REGION', 'eu-central-1')\n",
-    "sb_config.save('AWS_ROLE', 'arn:aws:iam::166283903643:role/sagemaker-role')\n",
+    "sb_config.save('AWS_KEY_ID', '<key id>')\n",
+    "sb_config.save('AWS_ACCESS_KEY', '<access key>')\n",
+    "sb_config.save('AWS_REGION', '<region>')\n",
+    "sb_config.save('AWS_ROLE', '<role>')\n",
     "\n",
     "# S3 bucket, which must exist\n",
     "sb_config.save('AWS_BUCKET', 'ida-dataset-bucket')\n",
